# whisperlaz

./: .gitignore  0-0001-clean-data.py  1-0001-eval-base-model.ipynb  1-0001-eval-base-model.py  1-0001-ft-asr-whisper.ipynb  2-0001-train-ja-accelerate.py  2-0001-train-ja.ipynb  2-0002-train-ja-accelerate-lora.py  3-0001-eval-finished.ipynb  3-0002-eval-finished.ipynb  3-0002-eval-finished.py  4-0001-lora-merge.py  README.md  pyproject.toml
manifest/: asmr-broken-file-list.csv  asmr-data.csv  model-comparison-evals-1.csv  model-comparison-evals.csv  model-list-evals-1.csv  model-list-evals-train-1.csv  preprocessed-segments-index.csv
